<resources>
    <string name="app_name">Legendary Helper</string>

    <string name="players">Players</string>

    <string name="mastermind">Mastermind</string>
    <string name="masterminds">Masterminds</string>
    <string name="scheme">Scheme</string>
    <string name="schemes">Schemes</string>
    <string name="villains">Villains</string>
    <string name="henchmen">Henchmen</string>
    <string name="hero">Hero</string>
    <string name="heroes">Heroes</string>
    <string name="gameSet">Game Set</string>
    <string name="gameSets">Game Sets</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>

    <string name="confirmDeleteMessage">Are you sure you want to delete</string>
    <string name="confirmDeleteTitle">Confirm Deletion</string>
    <string name="confirmSave">Would you like to save before exiting?</string>
    <string name="addAlwaysLeaderDescription">Sets this card to always be lead by the selected Mastermind</string>
    <string name="noGameSetsFound">No custom game sets found</string>
    <string name="noMastermindsFound">No custom masterminds found</string>
    <string name="noVillainsFound">No custom villains found</string>
    <string name="noHenchmenFound">No custom henchmen found</string>

    <string name="filter">Filter</string>
    <string name="enabled">Enabled</string>
    <string name="delete">Delete</string>
    <string name="add_new">Add New</string>
    <string name="custom">Custom</string>
    <string name="lock">Lock</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="deleted">deleted</string>
    <string name="saved">saved</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="alwaysLeadBy">Always Lead By</string>
    <string name="add">Add</string>
    <string name="gameSetInfo">Game Set Info</string>
    <string name="henchmenInfo">Henchmen Info</string>
    <string name="heroInfo">Hero Info</string>
    <string name="mastermindInfo">Mastermind Info</string>
    <string name="schemeInfo">Scheme Info</string>
    <string name="villainsInfo">Villains Info</string>
    <string name="filterGameSets">Filter Game Sets</string>
    <string name="customGameSet">Custom Game Set</string>
    <string name="filterVillains">Filter Villains</string>
    <string name="customVillains">Custom Villains</string>
    <string name="filterHenchmen">Filter Henchmen</string>
    <string name="customHenchmen">Custom Henchmen</string>
    <string name="filterHeroes">Filter Heroes</string>
    <string name="customHero">Custom Hero</string>
    <string name="filterMasterminds">Filter Masterminds</string>
    <string name="customMastermind">Custom Mastermind</string>
    <string name="filterSchemes">Filter Schemes</string>
    <string name="customScheme">Custom Scheme</string>
    <string name="mastermindLeaderLabel">Mastermind Leader:</string>
    <string name="gameSetLabel">Game Set:</string>
    <string name="villainsLabel">Villains:</string>
    <string name="alwaysLeads">Always Leads</string>
    <string name="henchmenLabel">Henchmen:</string>
    <string name="covert">Covert</string>
    <string name="has_gun_in_art">Has gun in art</string>
    <string name="has_flavor_text">Has flavor text</string>
</resources>