<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="bottom">

    <TextView
            android:text="@string/alwaysLeads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="16dp">

        <TextView
                android:text="@string/villainsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cardInfoMastermindVillainsSpinner"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="16dp">

        <TextView
                android:text="@string/henchmenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cardInfoMastermindHenchmenSpinner"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />
    </LinearLayout>

</LinearLayout>